# Script

./: .gitignore
AHK/: KeyboardOnScreen_小鹤双拼版.ahk  KeyboardOnScreen_张鑫版.ahk  KeyboardOnScreen_微软双拼版.ahk  MouseClick.ahk  bigtime.ahk  dateAndWeek.ahk  缩写.ahk  调整当前窗口的透明度（WinSet，label）.ahk
C++/: BigInt.cpp  BigInt.h  BigIntTest.cpp  MyUnitTestFramework.h
C++/BigInt/: BigInt.cpp  BigInt.h  BigIntTest.cpp  CMakeLists.txt  MyUnitTestFramework.h  build.sh  gprof2dot.py
C++/dsa/vector/: vector.h  vector_assignment.h  vector_bracket.h  vector_constructor_by_copying.h  vector_expand.h  vector_find.h  vector_implementation - 副本 - 副本.h  vector_remove.h
Python/: Aff.py  BeautifulTest.py  GetMeiZi.py  Python自动测试Md5.py  Weather.py  delete.py  delete_file.txt  getWeather.py  get_proxy.py  namecheck.py  qiubai.py  read.py  readhub.py  rmDotSVN.py  test.py  zhaochaassistant.py  批量下载小说.py  招生.py  杨辉三角.py  调用谷歌翻译.py
Python/awesome-python3-webapp/www/: app.py  config.py  config_default.py  config_override.py  coroweb.py  handlers.py  models.py  orm.py
Shell/: Aff.sh  TimeAudio.sh
config/: _vimrc
